Fixed some layout issues

--- a/style.css
+++ b/style.css
@@ -36,5 +36,5 @@ body {
 hr { width:256px; }
 a {
     text-decoration: none;
-    color: white;
+    color: black;
 }
